--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<script language="javascript" type="text/javascript"> 
-// 以下方式直接跳转
-window.location.href='/blog-mdui';
-</script>
+<html>
+  <head>
+    <script language="javascript" type="text/javascript"> 
+      window.location.href='/blog-mdui';
+    </script>
+  </head>
+</html>
