--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <script language="javascript" type="text/javascript"> 
+ var tmpTag = 'https:' == document.location.protocol ? false : true;
+        if(tmpTag){
+        var urls=window.location.href;
+        urls = urls.replace("http", "https");
+        window.location=urls;}
       window.location.href='/blog-mdui';
     </script>
   </head>
