--- a/ads/index.html
+++ b/ads/index.html
@@ -1,5 +1,5 @@
 <html>
     <head>
-        <script src="ads.js"></script>
+        <script data-ad-client="ca-pub-2651958652818307" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
 </html>
