--- a/Test/upload.html
+++ b/Test/upload.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
@@ -18,7 +18,7 @@
                 }
             });
 
-            xhr.open("PUT", "http://api.troy-web.top/uploadkey");
+            xhr.open("PUT", "https://api.troy-web.top/uploadkey");
             xhr.setRequestHeader("content-type", "video/mp4");
             xhr.setRequestHeader("filename", uploadFile.files[0].name);
             xhr.setRequestHeader("cache-control", "no-cache");
