--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="zh-CN">
 
 <head>
-  <title>简单的大佬</title>
+  <title>做一个简单的大佬</title>
+<meta name="baidu_union_verify" content="7afc7abfdc9214b18423ea1b6f1cd545">
   <script language="javascript" type="text/javascript">
     if ('https:' != document.location.protocol) {
       var urls = window.location.href;
